# crew-AI

coder/output/: code_and_output.txt
coder/src/coder/: crew.py  main.py
nexbits_crew/: README.md  pyproject.toml  report.md
nexbits_crew/output/: propose.md
nexbits_crew/src/nexbits_crew/: crew.py  main.py
nexbits_crew/src/nexbits_crew/config/: tasks.yaml
software_team/: README.md  pyproject.toml
software_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
software_team/src/software_team/: crew.py  main.py
software_team/src/software_team/config/: agents.yaml
stock_alert/: README.md  pyproject.toml
stock_alert/output/: decision.md  research_report.json  trending_companies.json
stock_alert/src/stock_alert/: crew.py  main.py
stock_alert/src/stock_alert/config/: tasks.yaml
stock_alert/src/stock_alert/tools/: push_tool.py
