[project]
name = "nexbits_crew"
version = "0.1.0"
description = "nexbits_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
nexbits_crew = "nexbits_crew.main:run"
run_crew = "nexbits_crew.main:run"
train = "nexbits_crew.main:train"
replay = "nexbits_crew.main:replay"
test = "nexbits_crew.main:test"
run_with_trigger = "nexbits_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
