[project]
name = "stock_alert"
version = "0.1.0"
description = "stock_alert using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7",
    "sendgrid>=6.12.5",
]

[project.scripts]
stock_alert = "stock_alert.main:run"
run_crew = "stock_alert.main:run"
train = "stock_alert.main:train"
replay = "stock_alert.main:replay"
test = "stock_alert.main:test"
run_with_trigger = "stock_alert.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
